# rk

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  Packager.toml  Packager.windows-cross.toml  README.md  index.html  lint-staged.config.js  package-lock.json  package.json  sitemap-0.xml  sitemap-index.xml
_astro/: Search.astro_astro_type_script_index_0_lang.CRsG3GDI.js  index.95jefZh9.css  ui-core.Bhlej1B4.js
app/: index.html  rk-197cf62b8b0d7ec2.js  rk-197cf62b8b0d7ec2_bg.wasm
crates/urdf-frontend/: Cargo.toml  build.rs
crates/urdf-frontend/src/: app.rs  app_state.rs  lib.rs  main.rs  viewport_state.rs
crates/urdf-frontend/src/actions/: assembly.rs  file.rs  mod.rs  part.rs
crates/urdf-frontend/src/app/: dock.rs  menu.rs  mod.rs
crates/urdf-frontend/src/panels/: graph.rs  hierarchy.rs  joint_list.rs  joint_points.rs  mod.rs  part_list.rs  properties.rs  viewport.rs
crates/urdf-frontend/src/panels/part_list/: mod.rs  tree.rs
crates/urdf-frontend/src/panels/properties/: component.rs  helpers.rs  mod.rs
crates/urdf-frontend/src/panels/properties/components/: joint_points.rs  physical.rs  transform.rs
crates/urdf-frontend/src/panels/viewport/: camera_overlay.rs  mod.rs
crates/urdf-frontend/src/state/: mod.rs  viewport.rs
crates/urdf-renderer/: Cargo.toml
crates/urdf-renderer/src/: axis.rs  camera.rs  grid.rs  lib.rs  marker.rs  mesh.rs  renderer.rs
crates/urdf-renderer/src/gizmo/: mod.rs
crates/urdf-renderer/src/shaders/: mesh.wgsl
dev/: index.html  rk-1897702003c52b7.js  rk-23ab1439249d208d.js  rk-2f0f1596970086.js  (+19 more)
(+157 files in other folders)
