[package]
name = "urdf-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A visual editor for URDF (Unified Robot Description Format) files"
build = "build.rs"

[[bin]]
name = "rk"
path = "src/main.rs"

[dependencies]
urdf-core = { workspace = true }
urdf-renderer = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_dock = { workspace = true }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
