[package]
name = "urdf-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
urdf-core = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
